Fix page-title on index ppage to fit better on small screens

--- a/styles.scss
+++ b/styles.scss
@@ -25,8 +25,8 @@ $link-underline: 2px solid $brand-color;
 
 $logo-height: 4em;
 
-$main-nav-mid-breakpoint: 25em;
-$main-nav-wide-breakpoint: 35em;
+$main-nav-mid-breakpoint: 30em;
+$main-nav-wide-breakpoint: 40em;
 
 /* -------------------------------------------------------------------------
  * Global reset
@@ -97,6 +97,9 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   position: relative;
 }
+.home .page-title {
+  font-size: $base-font-size*1.5;
+}
 .event {
   text-align: center;
 }
@@ -132,6 +135,14 @@ h1, h2, h3, h4, h5, h6 {
   .page-title {
     font-size: $base-font-size*3.5;
     letter-spacing: -0.04em;
+  }
+  .home .page-title {
+    font-size: $base-font-size*2.25;
+  }
+}
+@media screen and (min-width: 35em) {
+  .home .page-title {
+    font-size: $base-font-size*3.5;
   }
 }
 @media screen and (min-width: 0) {
